# autovalue

./: .gitattributes  .gitignore  .ignore  AGENTS.md  README.md  TECHNICAL_SPEC_MVP.md  pyproject.toml  requirements.txt
client_test_files/: README_TEST_RUN.md
config/: sources.yaml  task.example.yaml
config/default_templates/: apartment.xls
config/report_templates/: default_report_template.docx  valuation_report_real_template.inventory.json  valuation_report_real_template.inventory.md
config/template_profiles/: apartment.yaml  parking.yaml
docs/: REPORT_VARIABLES.md  WEB_ARCHITECTURE_MVP.md  WINDOWS_APP_MVP.md
inputs/: links.example.txt
scripts/: bootstrap_tools.ps1  build_windows_app.ps1  check_env.py  collect_from_links.py  create_real_report_template.py  discover_links.py  extract_intake.py  fill_excel_template.py  generate_word_report.py  import_library.py  import_reports.py  prepare_report_template.py  run_batch_workflow.py  run_excel_workflow.py  run_full_workflow.py  run_web_app.py  run_windows_app.py  smoke_ocr_pdf.py  validate_report.py
src/realtify/: __init__.py  analog_cache.py  analog_library.py  batch_workflow.py  candidate_selector.py  collect_from_links.py  complex_search.py  discover_links.py  e2e_report.py  env_check.py  excel_sidecar.py  excel_summary.py  excel_tools.py  fill_template.py  full_workflow.py  images.py  intake.py  koza_engine.py  models.py  nbu_rate.py  ocr.py  paths.py  pdf_tools.py  progress.py  real_report_template.py  report_db.py  report_document.py  report_docx_mapper.py  report_generator.py  report_html.py  report_pdf.py  (+12 more)
(+14 files in other folders)
